_includes/manuals/2.0/5.2.4_cr_gce.md
* Requires client e-mail address of an authorised Google Cloud Console client ID is entered in the new compute resource screen and its associated .json private key file is manually transferred to the foreman server.
* The certificate must be stored in a location the foreman user account has permission to read.
* If your server enforces SELinux ensure the context is suitable or relabel it using `restorecon -vv /usr/share/foreman/gce.json`
* Specify the location *on the foreman server* as the certificate path value e.g /usr/share/foreman/gce.json
* Ensure images are associated under the *Images* tab on the compute resource
	* Ensure the correct username except *root* is set for Foreman to SSH into the image (if using SSH provisioning). Note that - For security reasons, Google do not provide the ability to ssh in directly as root.
	* Tick the user_data box if the image is capable of using user_data scripts (usually because it has cloud-init installed).
* Add a provisioning template either of type *finish* or *user_data* which will be executed on the new image.
	* 'finish' templates complete the provisioning process via SSH - this requires Foreman to be able to reach the IP of the new host, and that SSH is allowing connections from Foreman. This uses the SSH key which Foreman uploaded to your compute resource when it was added to Foreman.
	* 'user_data' templates instead provision by cloud-init (or similar meta-data retrieving scripts). This will not require Foreman to be able to reach the host, but the host must be able to reach Foreman (since user_data execution is asynchronous, the host must notify Foreman that the build is complete).
* Enabling *use_uuid_for_certificates* in *Administer > Settings* is recommended for consistent Puppet certificate IDs instead of hostnames.
* The *Associate Ephemeral External IP* checkbox means the public IP address (rather than private IP) will be used for communication with the instance from Foreman.
* Ensure that the selected template is associated to the OS (on the *Associations* tab) and is set as the default for the operating system too.

#### Setting up the cloud project

All Google Compute Engine access is contained within a "project" set up via the Google Developers Console.  Access [the Google Developers Console](https://console.developers.google.com/iam-admin/projects), and click *Create Project*.

![Create Project](/static/images/screenshots/gce/new_create_project.png)

By default, your project will have the Compute Engine and App Engine services enabled.
Now go to [the Compute Engine API Overiew](https://console.developers.google.com/apis/api/compute_component), and select the Google Compute Engine API.

![Compute Engine API Overiew](/static/images/screenshots/gce/enabled_compute_engine_api.png)

Under *APIs &amp; Services > Library*, apply filter *compute* and select *API* then click the *Enable* button.

![API Library](/static/images/screenshots/gce/api_library.png)

![Enable API](/static/images/screenshots/gce/new_enable_api.png)

Next under *Credentials*, click *Create Credentials > Create service account key* and choose your service account for Compute Engine.

![Credential list](/static/images/screenshots/gce/credential_list.png)

![Service account](/static/images/screenshots/gce/create_credentials_using_json_format.png)

Click *Generate new JSON key* and save the new .json file.  This should be uploaded to the Foreman server to a location that the 'foreman' user can read, such as `/usr/share/foreman/gce.json`. You don't need to provide any password to Foreman to use this JSON key.

<div class="alert alert-info">Change the .json file owner to 'foreman' and chmod 0600 for security.  If your server uses SELinux ensure the context is suitable or relabel it using restorecon -vv /usr/share/foreman/gce.json</div>

#### Adding the compute resource

In Foreman, under *Infrastructure > Compute resources > New compute resource*, select *Google* from the provider dropdown menu and fill in the GCE-specific fields as follows:

* *Google Project ID:* shown on the project overview page in the GCE console, e.g. "nomadic-rite-396"
* *Client Email:* shown on the [*Credentials* page](https://console.developers.google.com/iam-admin/serviceaccounts/) after creating the service account as *Service account ID*, e.g. "543...@developer.gserviceaccount.com"
* *Certificate path:* full path of the .json file stored on the Foreman server, e.g. /usr/share/foreman/gce.json
